Toolbar de la ventana principal

--- a/src/main/resources/resourcebundle/MessagesBundle.properties
+++ b/src/main/resources/resourcebundle/MessagesBundle.properties
@@ -17,3 +17,13 @@ menu.birthday.thismonth = This month
 
 menu.help = Help
 menu.help.about = About...
+
+toolbar.search = Search
+
+toolbar.contactadd.tooltip = Add contact
+
+toolbar.searchtype.all = All
+toolbar.searchtype.category = Category
+toolbar.searchtype.name = Name
+toolbar.searchtype.phone = Phone number
+toolbar.searchtype.tooltip = Search type
