--- a/src/main/resources/resourcebundle/MessagesBundle_es_ES.properties
+++ b/src/main/resources/resourcebundle/MessagesBundle_es_ES.properties
@@ -17,3 +17,13 @@ menu.birthday.thismonth = Este mes
 
 menu.help = Ayuda
 menu.help.about = Acerca de...
+
+toolbar.search = Buscar
+
+toolbar.contactadd.tooltip = Añadir contacto
+
+toolbar.searchtype.all = Todos
+toolbar.searchtype.category = Categoría
+toolbar.searchtype.name = Nombre
+toolbar.searchtype.phone = Teléfono
+toolbar.searchtype.tooltip = Tipo de búsqueda
