Traducciones de tipos de teléfono, correo y dirección

--- a/src/main/resources/resourcebundle/MessagesBundle.properties
+++ b/src/main/resources/resourcebundle/MessagesBundle.properties
@@ -27,3 +27,19 @@ toolbar.searchtype.category = Category
 toolbar.searchtype.name = Name
 toolbar.searchtype.phone = Phone number
 toolbar.searchtype.tooltip = Search type
+
+information.phone.type.cell = Cell
+information.phone.type.fax = Fax
+information.phone.type.home = Home
+information.phone.type.pager = Pager
+information.phone.type.text = SMS
+information.phone.type.textphone = Textphone
+information.phone.type.video = Video
+information.phone.type.voice = Voice
+information.phone.type.work = Work
+
+information.email.type.home = Personal
+information.email.type.work = Work
+
+information.address.type.home = Personal
+information.adderss.type.work = Trabajo
