--- a/src/main/resources/resourcebundle/MessagesBundle_es_ES.properties
+++ b/src/main/resources/resourcebundle/MessagesBundle_es_ES.properties
@@ -27,3 +27,19 @@ toolbar.searchtype.category = Categoría
 toolbar.searchtype.name = Nombre
 toolbar.searchtype.phone = Teléfono
 toolbar.searchtype.tooltip = Tipo de búsqueda
+
+information.phone.type.cell = Móvil
+information.phone.type.fax = Fax
+information.phone.type.home = Casa
+information.phone.type.pager = Paginación
+information.phone.type.text = SMS
+information.phone.type.textphone = Teléfono de texto
+information.phone.type.video = Vídeo
+information.phone.type.voice = Voz
+information.phone.type.work = Trabajo
+
+information.email.type.home = Personal
+information.email.type.work = Trabajo
+
+information.address.type.home = Personal
+information.adderss.type.work = Trabajo
