Corrección de traducción de dirección

--- a/src/main/resources/resourcebundle/MessagesBundle.properties
+++ b/src/main/resources/resourcebundle/MessagesBundle.properties
@@ -42,4 +42,4 @@ information.email.type.home = Personal
 information.email.type.work = Work
 
 information.address.type.home = Personal
-information.adderss.type.work = Trabajo
+information.adderss.type.work = Work
