--- a/src/main/resources/resourcebundle/MessagesBundle_es_ES.properties
+++ b/src/main/resources/resourcebundle/MessagesBundle_es_ES.properties
@@ -43,3 +43,6 @@ information.email.type.work = Trabajo
 
 information.address.type.home = Personal
 information.adderss.type.work = Trabajo
+
+information.dateformat = {2} de {1} de {0}
+information.ageformat = {0} años
