--- a/src/main/resources/resourcebundle/MessagesBundle_en_US.properties
+++ b/src/main/resources/resourcebundle/MessagesBundle_en_US.properties
@@ -43,3 +43,6 @@ information.email.type.work = Work
 
 information.address.type.home = Personal
 information.adderss.type.work = Work
+
+information.dateformat = {1} {2}, {0}
+information.ageformat = {0} years old
