--- a/src/main/resources/resourcebundle/MessagesBundle_es_ES.properties
+++ b/src/main/resources/resourcebundle/MessagesBundle_es_ES.properties
@@ -28,6 +28,13 @@ toolbar.searchtype.name = Nombre
 toolbar.searchtype.phone = Teléfono
 toolbar.searchtype.tooltip = Tipo de búsqueda
 
+information.personal.name = Nombre
+information.personal.surname = Apellidos
+information.personal.fullname = Nombre completo
+information.personal.birthday = Fecha de nacimiento
+information.personal.categories = Categorías
+information.personal.notes = Notas
+
 information.phone.type.cell = Móvil
 information.phone.type.fax = Fax
 information.phone.type.home = Casa
@@ -46,3 +53,9 @@ information.adderss.type.work = Trabajo
 
 information.dateformat = {2} de {1} de {0}
 information.ageformat = {0} años
+
+editcontact.photo.clean = Borrar
+editcontact.photo.search = Buscar
+
+editcontact.cancel = Cancelar
+editcontact.save = Guardar
