--- a/src/main/resources/resourcebundle/MessagesBundle_en_US.properties
+++ b/src/main/resources/resourcebundle/MessagesBundle_en_US.properties
@@ -28,6 +28,13 @@ toolbar.searchtype.name = Name
 toolbar.searchtype.phone = Phone number
 toolbar.searchtype.tooltip = Search type
 
+information.personal.name = Given name
+information.personal.surname = Family name
+information.personal.fullname = Full name
+information.personal.birthday = Birthday
+information.personal.categories = Categories
+information.personal.notes = Notes
+
 information.phone.type.cell = Cell
 information.phone.type.fax = Fax
 information.phone.type.home = Home
@@ -46,3 +53,9 @@ information.adderss.type.work = Work
 
 information.dateformat = {1} {2}, {0}
 information.ageformat = {0} years old
+
+editcontact.photo.clean = Clean
+editcontact.photo.search = Search
+
+editcontact.cancel = Cancel
+editcontact.save = Save
