Creación avanzada de contacto (teléfono/email/dirección)

--- a/src/main/resources/resourcebundle/MessagesBundle.properties
+++ b/src/main/resources/resourcebundle/MessagesBundle.properties
@@ -35,6 +35,10 @@ information.personal.birthday = Birthday
 information.personal.categories = Categories
 information.personal.notes = Notes
 
+information.phone = Telephone
+information.phone.add = Add telephone
+information.phone.edit = Edit telephone
+information.phone.remove = Remove telephone
 information.phone.type.cell = Cell
 information.phone.type.fax = Fax
 information.phone.type.home = Home
@@ -45,11 +49,19 @@ information.phone.type.video = Video
 information.phone.type.voice = Voice
 information.phone.type.work = Work
 
+information.email = Email
+information.email.add = Add email
+information.email.edit = Edit email
+information.email.remove = Remove email
 information.email.type.home = Personal
 information.email.type.work = Work
 
+information.address = Address
+information.address.add = Add address
+information.address.edit = Edit address
+information.address.remove = Remove address
 information.address.type.home = Personal
-information.adderss.type.work = Work
+information.address.type.work = Work
 
 information.dateformat = {1} {2}, {0}
 information.ageformat = {0} years old
@@ -59,3 +71,28 @@ editcontact.photo.search = Search
 
 editcontact.cancel = Cancel
 editcontact.save = Save
+
+editcontact.phone.add = Add phone
+editcontact.phone.edit = Edit phone
+editcontact.phone.remove = Remove phone
+editcontact.phone.number = Number
+editcontact.phone.type = Type
+editcontact.phone.tag = Tag
+
+editcontact.email.add = Add email
+editcontact.email.edit = Edit email
+editcontact.email.remove = Remove email
+editcontact.email.email = Email
+editcontact.email.type = Type
+editcontact.email.tag = Tag
+
+editcontact.address.add = Add address
+editcontact.address.edit = Edit address
+editcontact.address.remove = Remove address
+editcontact.address.street = Street
+editcontact.address.locality = Locality
+editcontact.address.region = Region
+editcontact.address.postalcode = Postal code
+editcontact.address.country = Country
+editcontact.address.type = Type
+editcontact.address.tag = Tag
