--- a/src/main/resources/resourcebundle/MessagesBundle_es_ES.properties
+++ b/src/main/resources/resourcebundle/MessagesBundle_es_ES.properties
@@ -35,6 +35,10 @@ information.personal.birthday = Fecha de nacimiento
 information.personal.categories = Categorías
 information.personal.notes = Notas
 
+information.phone = Teléfono
+information.phone.add = Añadir teléfono
+information.phone.edit = Editar teléfono
+information.phone.remove = Eliminar teléfono
 information.phone.type.cell = Móvil
 information.phone.type.fax = Fax
 information.phone.type.home = Casa
@@ -45,11 +49,19 @@ information.phone.type.video = Vídeo
 information.phone.type.voice = Voz
 information.phone.type.work = Trabajo
 
+information.email = Email
+information.email.add = Añadir email
+information.email.edit = Editar email
+information.email.remove = Eliminar email
 information.email.type.home = Personal
 information.email.type.work = Trabajo
 
+information.address = Dirección
+information.address.add = Añadir dirección
+information.address.edit = Editar dirección
+information.address.remove = Eliminar dirección
 information.address.type.home = Personal
-information.adderss.type.work = Trabajo
+information.address.type.work = Trabajo
 
 information.dateformat = {2} de {1} de {0}
 information.ageformat = {0} años
@@ -59,3 +71,28 @@ editcontact.photo.search = Buscar
 
 editcontact.cancel = Cancelar
 editcontact.save = Guardar
+
+editcontact.phone.add = Añadir teléfono
+editcontact.phone.edit = Editar teléfono
+editcontact.phone.remove = Eliminar teléfono
+editcontact.phone.number = Número
+editcontact.phone.type = Tipo
+editcontact.phone.tag = Etiqueta
+
+editcontact.email.add = Añadir email
+editcontact.email.edit = Editar email
+editcontact.email.remove = Eliminar email
+editcontact.email.email = Email
+editcontact.email.type = Tipo
+editcontact.email.tag = Etiqueta
+
+editcontact.address.add = Añadir dirección
+editcontact.address.edit = Editar dirección
+editcontact.address.remove = Eliminar dirección
+editcontact.address.street = Calle
+editcontact.address.locality = Localidad
+editcontact.address.region = Región
+editcontact.address.postalcode = Código postal
+editcontact.address.country = País
+editcontact.address.type = Tipo
+editcontact.address.tag = Etiqueta
