--- a/src/main/resources/resourcebundle/MessagesBundle_es_ES.properties
+++ b/src/main/resources/resourcebundle/MessagesBundle_es_ES.properties
@@ -4,9 +4,9 @@ menu.file.open = Abrir
 menu.file.exit = Salir
 
 menu.contact = Contactos
-menu.contact.add = Añadir
-menu.contact.edit = Modificar
-menu.contact.remove = Eliminar
+menu.contact.add = Añadir contacto
+menu.contact.edit = Modificar contacto
+menu.contact.remove = Eliminar contacto
 
 menu.birthday = Cumpleaños
 menu.birthday.today = Hoy
