--- a/src/main/resources/resourcebundle/MessagesBundle_en_US.properties
+++ b/src/main/resources/resourcebundle/MessagesBundle_en_US.properties
@@ -4,9 +4,9 @@ menu.file.open = Open
 menu.file.exit = Exit
 
 menu.contact = Contact
-menu.contact.add = Add
-menu.contact.edit = Edit
-menu.contact.remove = Remove
+menu.contact.add = Add contact
+menu.contact.edit = Edit contact
+menu.contact.remove = Remove contact
 
 menu.birthday = Birthday
 menu.birthday.today = Today
