--- a/src/main/resources/resourcebundle/MessagesBundle_es_ES.properties
+++ b/src/main/resources/resourcebundle/MessagesBundle_es_ES.properties
@@ -7,6 +7,7 @@ menu.contact = Contactos
 menu.contact.add = Añadir contacto
 menu.contact.edit = Modificar contacto
 menu.contact.remove = Eliminar contacto
+menu.contact.statistics = Estadísticas
 
 menu.birthday = Cumpleaños
 menu.birthday.today = Hoy
@@ -96,3 +97,18 @@ editcontact.address.postalcode = Código postal
 editcontact.address.country = País
 editcontact.address.type = Tipo
 editcontact.address.tag = Etiqueta
+
+statistic.title.text = Característica
+statistic.title.value = Cantidad
+statistic.title.percentage = %
+
+statistic.item.total = Total de contactos
+statistic.item.birthday = Número de contactos con cumpleaños
+statistic.item.photo =  Número de contactos con foto
+statistic.item.phone =  Número de contactos con teléfono
+statistic.item.email =  Número de contactos con email
+statistic.item.address =  Número de contactos con dirección
+statistic.item.category = Número de contactos en categoría: {0}
+statistic.item.uniquephone = Número de teléfonos únicos
+statistic.item.uniqueemail = Número de emails únicos
+statistic.item.uniqueaddress = Número de direcciones únicas
