--- a/src/main/resources/resourcebundle/MessagesBundle_en_US.properties
+++ b/src/main/resources/resourcebundle/MessagesBundle_en_US.properties
@@ -7,6 +7,7 @@ menu.contact = Contact
 menu.contact.add = Add contact
 menu.contact.edit = Edit contact
 menu.contact.remove = Remove contact
+menu.contact.statistics = Statistics
 
 menu.birthday = Birthday
 menu.birthday.today = Today
@@ -96,3 +97,18 @@ editcontact.address.postalcode = Postal code
 editcontact.address.country = Country
 editcontact.address.type = Type
 editcontact.address.tag = Tag
+
+statistic.title.text = Property
+statistic.title.value = Amonut
+statistic.title.percentage = %
+
+statistic.item.total = Total of contacts
+statistic.item.birthday = Number of contacts with birthday
+statistic.item.photo =  Number of contacts with photo
+statistic.item.phone =  Number of contacts with phone
+statistic.item.email =  Number of contacts with email
+statistic.item.address =  Number of contacts with address
+statistic.item.category = Number of contacts in category: {0}
+statistic.item.uniquephone = Number of unique telephone number
+statistic.item.uniqueemail = Number of unique email
+statistic.item.uniqueaddress = Number of unique address
