Ventanas de cumpleaños

--- a/src/main/resources/resourcebundle/MessagesBundle.properties
+++ b/src/main/resources/resourcebundle/MessagesBundle.properties
@@ -112,3 +112,5 @@ statistic.item.category = Number of contacts in category: {0}
 statistic.item.uniquephone = Number of unique telephone number
 statistic.item.uniqueemail = Number of unique email
 statistic.item.uniqueaddress = Number of unique address
+
+birthday.show = Show
