--- a/src/main/resources/resourcebundle/MessagesBundle_es_ES.properties
+++ b/src/main/resources/resourcebundle/MessagesBundle_es_ES.properties
@@ -112,3 +112,5 @@ statistic.item.category = Número de contactos en categoría: {0}
 statistic.item.uniquephone = Número de teléfonos únicos
 statistic.item.uniqueemail = Número de emails únicos
 statistic.item.uniqueaddress = Número de direcciones únicas
+
+birthday.show = Mostrar
