--- a/src/main/resources/resourcebundle/MessagesBundle_es_ES.properties
+++ b/src/main/resources/resourcebundle/MessagesBundle_es_ES.properties
@@ -36,6 +36,10 @@ information.personal.birthday = Fecha de nacimiento
 information.personal.categories = Categorías
 information.personal.notes = Notas
 
+information.category.add = Añadir categoría
+information.category.edit = Editar categoría
+information.category.remove = Eliminar categoría
+
 information.phone = Teléfono
 information.phone.add = Añadir teléfono
 information.phone.edit = Editar teléfono
@@ -72,6 +76,11 @@ editcontact.photo.search = Buscar
 
 editcontact.cancel = Cancelar
 editcontact.save = Guardar
+
+editcontact.category.add = Añadir categoría
+editcontact.category.edit = Editar categoría
+editcontact.category.remove = Eliminar categoría
+editcontact.category.category = Categoría
 
 editcontact.phone.add = Añadir teléfono
 editcontact.phone.edit = Editar teléfono
