--- a/src/main/resources/resourcebundle/MessagesBundle_en_US.properties
+++ b/src/main/resources/resourcebundle/MessagesBundle_en_US.properties
@@ -36,6 +36,10 @@ information.personal.birthday = Birthday
 information.personal.categories = Categories
 information.personal.notes = Notes
 
+information.category.add = Add category
+information.category.edit = Edit category
+information.category.remove = Remove category
+
 information.phone = Telephone
 information.phone.add = Add telephone
 information.phone.edit = Edit telephone
@@ -72,6 +76,11 @@ editcontact.photo.search = Search
 
 editcontact.cancel = Cancel
 editcontact.save = Save
+
+editcontact.category.add = Add category
+editcontact.category.edit = Edit category
+editcontact.category.remove = Remove category
+editcontact.category.category = Category
 
 editcontact.phone.add = Add phone
 editcontact.phone.edit = Edit phone
