--- a/src/main/resources/resourcebundle/MessagesBundle.properties
+++ b/src/main/resources/resourcebundle/MessagesBundle.properties
@@ -1,6 +1,6 @@
 menu.file = File
-menu.file.new = New
-menu.file.open = Open
+menu.file.new = New directory
+menu.file.open = Open directory
 menu.file.exit = Exit
 
 menu.contact = Contact
@@ -10,116 +10,100 @@ menu.contact.remove = Remove contact
 menu.contact.statistics = Statistics
 
 menu.birthday = Birthday
-menu.birthday.today = Today
-menu.birthday.withinweek = Within a week
-menu.birthday.withinmonth = Within a month
-menu.birthday.thisweek = This week
-menu.birthday.thismonth = This month
+menu.birthday.today = Birthdays today
+menu.birthday.withinweek = Birthdays within a week
+menu.birthday.withinmonth = Birthdays within a month
+menu.birthday.thisweek = Birthdays this week
+menu.birthday.thismonth = Birthdays this month
 
 menu.help = Help
-menu.help.about = About...
+menu.help.about = About
 
 toolbar.search = Search
-
+toolbar.searchtype.type.all = All
+toolbar.searchtype.type.category = Category
+toolbar.searchtype.type.name = Name
+toolbar.searchtype.type.telephone = Telephone
+toolbar.searchtype.tooltip = Search type
 toolbar.contactadd.tooltip = Add contact
 
-toolbar.searchtype.all = All
-toolbar.searchtype.category = Category
-toolbar.searchtype.name = Name
-toolbar.searchtype.phone = Phone number
-toolbar.searchtype.tooltip = Search type
+contact.name = Name
+contact.surname = Surname
+contact.fullname = Full name
+contact.birthday = Birthday
+contact.notes = Notes
+contact.photo.clean = Clean
+contact.photo.search = Search
 
-information.personal.name = Given name
-information.personal.surname = Family name
-information.personal.fullname = Full name
-information.personal.birthday = Birthday
-information.personal.categories = Categories
-information.personal.notes = Notes
+contact.category = Categories
+contact.category.add = Add category
+contact.category.edit = Edit category
+contact.category.remove = Remove category
+contact.category.category = Category
 
-information.category.add = Add category
-information.category.edit = Edit category
-information.category.remove = Remove category
+contact.telephone = Telephones
+contact.telephone.add = Add telephone
+contact.telephone.edit = Edit telephone
+contact.telephone.remove = Remove telephone
+contact.telephone.number = Numbre
+contact.telephone.type = Type
+contact.telephone.tag = Tag
 
-information.phone = Telephone
-information.phone.add = Add telephone
-information.phone.edit = Edit telephone
-information.phone.remove = Remove telephone
-information.phone.type.cell = Cell
-information.phone.type.fax = Fax
-information.phone.type.home = Home
-information.phone.type.pager = Pager
-information.phone.type.text = SMS
-information.phone.type.textphone = Textphone
-information.phone.type.video = Video
-information.phone.type.voice = Voice
-information.phone.type.work = Work
+contact.telephone.type.cell = Cell
+contact.telephone.type.fax = Fax
+contact.telephone.type.home = Home
+contact.telephone.type.pager = Pager
+contact.telephone.type.text = Text
+contact.telephone.type.textphone = Textphone
+contact.telephone.type.video = Video
+contact.telephone.type.voice = Voice
+contact.telephone.type.work = Work
 
-information.email = Email
-information.email.add = Add email
-information.email.edit = Edit email
-information.email.remove = Remove email
-information.email.type.home = Personal
-information.email.type.work = Work
+contact.email = Emails
+contact.email.add = Add email
+contact.email.edit = Edit email
+contact.email.remove = Remove email
+contact.email.email = Email
+contact.email.type = Type
+contact.email.tag = Tag
 
-information.address = Address
-information.address.add = Add address
-information.address.edit = Edit address
-information.address.remove = Remove address
-information.address.type.home = Personal
-information.address.type.work = Work
+contact.email.type.home = Personal
+contact.email.type.work = Work
 
-information.dateformat = {1} {2}, {0}
-information.ageformat = {0} years old
+contact.address = Addresses
+contact.address.add = Add address
+contact.address.edit = Edit address
+contact.address.remove = Remove address
+contact.address.street = Street
+contact.address.locality = Locality
+contact.address.region = Region
+contact.address.postalcode = Postal code
+contact.address.country = Country
+contact.address.type = Type
+contact.address.tag = Tag
 
-editcontact.photo.clean = Clean
-editcontact.photo.search = Search
+contact.address.type.home = Personal
+contact.address.type.work = Work
 
-editcontact.cancel = Cancel
-editcontact.save = Save
+contact.save = Save
+contact.cancel = Cancel
 
-editcontact.category.add = Add category
-editcontact.category.edit = Edit category
-editcontact.category.remove = Remove category
-editcontact.category.category = Category
+contact.date.format = {1} {2}, {0}
+contact.age.format = {0} years old
 
-editcontact.phone.add = Add phone
-editcontact.phone.edit = Edit phone
-editcontact.phone.remove = Remove phone
-editcontact.phone.number = Number
-editcontact.phone.type = Type
-editcontact.phone.tag = Tag
+statistics.title.text = Property
+statistics.title.value = Amonut
+statistics.title.percentage = %
 
-editcontact.email.add = Add email
-editcontact.email.edit = Edit email
-editcontact.email.remove = Remove email
-editcontact.email.email = Email
-editcontact.email.type = Type
-editcontact.email.tag = Tag
-
-editcontact.address.add = Add address
-editcontact.address.edit = Edit address
-editcontact.address.remove = Remove address
-editcontact.address.street = Street
-editcontact.address.locality = Locality
-editcontact.address.region = Region
-editcontact.address.postalcode = Postal code
-editcontact.address.country = Country
-editcontact.address.type = Type
-editcontact.address.tag = Tag
-
-statistic.title.text = Property
-statistic.title.value = Amonut
-statistic.title.percentage = %
-
-statistic.item.total = Total of contacts
-statistic.item.birthday = Number of contacts with birthday
-statistic.item.photo =  Number of contacts with photo
-statistic.item.phone =  Number of contacts with phone
-statistic.item.email =  Number of contacts with email
-statistic.item.address =  Number of contacts with address
-statistic.item.category = Number of contacts in category: {0}
-statistic.item.uniquephone = Number of unique telephone number
-statistic.item.uniqueemail = Number of unique email
-statistic.item.uniqueaddress = Number of unique address
+statistics.item.total = Total of contacts
+statistics.item.birthday = Number of contacts with birthday
+statistics.item.photo =  Number of contacts with photo
+statistics.item.telephone =  Number of contacts with phone
+statistics.item.email =  Number of contacts with email
+statistics.item.address =  Number of contacts with address
+statistics.item.category = Number of contacts in category: {0}
+statistics.item.uniquetelephone = Number of unique telephone number
+statistics.item.uniqueemail = Number of unique email
+statistics.item.uniqueaddress = Number of unique address
 
 birthday.show = Show
