--- a/src/main/resources/resourcebundle/MessagesBundle_es_ES.properties
+++ b/src/main/resources/resourcebundle/MessagesBundle_es_ES.properties
@@ -1,125 +1,109 @@
 menu.file = Archivo
-menu.file.new = Nueva
-menu.file.open = Abrir
+menu.file.new = Nuevo directorio
+menu.file.open = Abrir directorio
 menu.file.exit = Salir
 
-menu.contact = Contactos
+menu.contact = Contacto
 menu.contact.add = Añadir contacto
-menu.contact.edit = Modificar contacto
+menu.contact.edit = Editar contacto
 menu.contact.remove = Eliminar contacto
 menu.contact.statistics = Estadísticas
 
 menu.birthday = Cumpleaños
-menu.birthday.today = Hoy
-menu.birthday.withinweek = Dentro de una semana
-menu.birthday.withinmonth = Dentro de un mes
-menu.birthday.thisweek = Esta semana
-menu.birthday.thismonth = Este mes
+menu.birthday.today = Cumpleaños hoy
+menu.birthday.withinweek = Cumpleaños dentro de una semana
+menu.birthday.withinmonth = Cumpleaños dentro de un mes
+menu.birthday.thisweek = Cumpleaños esta semana
+menu.birthday.thismonth = Cumpleaños este mes
 
 menu.help = Ayuda
 menu.help.about = Acerca de...
 
 toolbar.search = Buscar
-
+toolbar.searchtype.type.all = Todos
+toolbar.searchtype.type.category = Categoría
+toolbar.searchtype.type.name = Nombre
+toolbar.searchtype.type.telephone = Teléfono
+toolbar.searchtype.tooltip = Tipo de búsqueda
 toolbar.contactadd.tooltip = Añadir contacto
 
-toolbar.searchtype.all = Todos
-toolbar.searchtype.category = Categoría
-toolbar.searchtype.name = Nombre
-toolbar.searchtype.phone = Teléfono
-toolbar.searchtype.tooltip = Tipo de búsqueda
+contact.name = Nombre
+contact.surname = Apellidos
+contact.fullname = Nombre completo
+contact.birthday = Fecha de nacimiento
+contact.notes = Notas
+contact.photo.clean = Borrar
+contact.photo.search = Buscar
 
-information.personal.name = Nombre
-information.personal.surname = Apellidos
-information.personal.fullname = Nombre completo
-information.personal.birthday = Fecha de nacimiento
-information.personal.categories = Categorías
-information.personal.notes = Notas
+contact.category = Categorías
+contact.category.add = Añadir categoría
+contact.category.edit = Editar categoría
+contact.category.remove = Eliminar categoría
+contact.category.category = Categoría
 
-information.category.add = Añadir categoría
-information.category.edit = Editar categoría
-information.category.remove = Eliminar categoría
+contact.telephone = Teléfonos
+contact.telephone.add = Añadir teléfono
+contact.telephone.edit = Editar teléfono
+contact.telephone.remove = Eliminar teléfono
+contact.telephone.number = Número
+contact.telephone.type = Tipo
+contact.telephone.tag = Etiqueta
 
-information.phone = Teléfono
-information.phone.add = Añadir teléfono
-information.phone.edit = Editar teléfono
-information.phone.remove = Eliminar teléfono
-information.phone.type.cell = Móvil
-information.phone.type.fax = Fax
-information.phone.type.home = Casa
-information.phone.type.pager = Paginación
-information.phone.type.text = SMS
-information.phone.type.textphone = Teléfono de texto
-information.phone.type.video = Vídeo
-information.phone.type.voice = Voz
-information.phone.type.work = Trabajo
+contact.telephone.type.cell = Móvil
+contact.telephone.type.fax = Fax
+contact.telephone.type.home = Casa
+contact.telephone.type.pager = Paginacion
+contact.telephone.type.text = SMS
+contact.telephone.type.textphone = Teléfono de texto
+contact.telephone.type.video = Vídeo
+contact.telephone.type.voice = Voz
+contact.telephone.type.work = Trabajo
 
-information.email = Email
-information.email.add = Añadir email
-information.email.edit = Editar email
-information.email.remove = Eliminar email
-information.email.type.home = Personal
-information.email.type.work = Trabajo
+contact.email = Emails
+contact.email.add = Añadir email
+contact.email.edit = Editar email
+contact.email.remove = Eliminar email
+contact.email.email = Email
+contact.email.type = Tipo
+contact.email.tag = Etiqueta
 
-information.address = Dirección
-information.address.add = Añadir dirección
-information.address.edit = Editar dirección
-information.address.remove = Eliminar dirección
-information.address.type.home = Personal
-information.address.type.work = Trabajo
+contact.email.type.home = Personal
+contact.email.type.work = Trabajo
 
-information.dateformat = {2} de {1} de {0}
-information.ageformat = {0} años
+contact.address = Direcciones
+contact.address.add = Añadir dirección
+contact.address.edit = Editar dirección
+contact.address.remove = Eliminar dirección
+contact.address.street = Calle
+contact.address.locality = Localidad
+contact.address.region = Región
+contact.address.postalcode = Código postal
+contact.address.country = País
+contact.address.type = Tipo
+contact.address.tag = Etiqueta
 
-editcontact.photo.clean = Borrar
-editcontact.photo.search = Buscar
+contact.address.type.home = Personal
+contact.address.type.work = Trabajo
 
-editcontact.cancel = Cancelar
-editcontact.save = Guardar
+contact.save = Guardar
+contact.cancel = Cancelar
 
-editcontact.category.add = Añadir categoría
-editcontact.category.edit = Editar categoría
-editcontact.category.remove = Eliminar categoría
-editcontact.category.category = Categoría
+contact.date.format = {2} de {1} de {0}
+contact.age.format = {0} años
 
-editcontact.phone.add = Añadir teléfono
-editcontact.phone.edit = Editar teléfono
-editcontact.phone.remove = Eliminar teléfono
-editcontact.phone.number = Número
-editcontact.phone.type = Tipo
-editcontact.phone.tag = Etiqueta
+statistics.title.text = Característica
+statistics.title.value = Cantidad
+statistics.title.percentage = %
 
-editcontact.email.add = Añadir email
-editcontact.email.edit = Editar email
-editcontact.email.remove = Eliminar email
-editcontact.email.email = Email
-editcontact.email.type = Tipo
-editcontact.email.tag = Etiqueta
-
-editcontact.address.add = Añadir dirección
-editcontact.address.edit = Editar dirección
-editcontact.address.remove = Eliminar dirección
-editcontact.address.street = Calle
-editcontact.address.locality = Localidad
-editcontact.address.region = Región
-editcontact.address.postalcode = Código postal
-editcontact.address.country = País
-editcontact.address.type = Tipo
-editcontact.address.tag = Etiqueta
-
-statistic.title.text = Característica
-statistic.title.value = Cantidad
-statistic.title.percentage = %
-
-statistic.item.total = Total de contactos
-statistic.item.birthday = Número de contactos con cumpleaños
-statistic.item.photo =  Número de contactos con foto
-statistic.item.phone =  Número de contactos con teléfono
-statistic.item.email =  Número de contactos con email
-statistic.item.address =  Número de contactos con dirección
-statistic.item.category = Número de contactos en categoría: {0}
-statistic.item.uniquephone = Número de teléfonos únicos
-statistic.item.uniqueemail = Número de emails únicos
-statistic.item.uniqueaddress = Número de direcciones únicas
+statistics.item.total = Total de contactos
+statistics.item.birthday = Número de contactos con cumpleaños
+statistics.item.photo =  Número de contactos con foto
+statistics.item.telephone =  Número de contactos con teléfono
+statistics.item.email =  Número de contactos con email
+statistics.item.address =  Número de contactos con dirección
+statistics.item.category = Número de contactos en categoría: {0}
+statistics.item.uniquetelephone = Número de teléfonos únicos
+statistics.item.uniqueemail = Número de emails únicos
+statistics.item.uniqueaddress = Número de direcciones únicas
 
 birthday.show = Mostrar
