Muestra la cantidad de contactos listados

--- a/src/main/resources/resourcebundle/MessagesBundle.properties
+++ b/src/main/resources/resourcebundle/MessagesBundle.properties
@@ -27,6 +27,8 @@ toolbar.searchtype.type.telephone = Telephone
 toolbar.searchtype.tooltip = Search type
 toolbar.contactadd.tooltip = Add contact
 
+contacts.size = {0} contacts
+
 contact.name = Name
 contact.surname = Surname
 contact.fullname = Full name
