--- a/src/main/resources/resourcebundle/MessagesBundle_es_ES.properties
+++ b/src/main/resources/resourcebundle/MessagesBundle_es_ES.properties
@@ -27,6 +27,8 @@ toolbar.searchtype.type.telephone = Teléfono
 toolbar.searchtype.tooltip = Tipo de búsqueda
 toolbar.contactadd.tooltip = Añadir contacto
 
+contacts.size = {0} contactos
+
 contact.name = Nombre
 contact.surname = Apellidos
 contact.fullname = Nombre completo
