Muestra la fecha de última edición

--- a/src/main/resources/resourcebundle/MessagesBundle.properties
+++ b/src/main/resources/resourcebundle/MessagesBundle.properties
@@ -92,6 +92,7 @@ contact.cancel = Cancel
 
 contact.date.format = {1} {2}, {0}
 contact.age.format = {0} years old
+contact.lastedition = Last edition on {0}
 
 statistics.title.text = Property
 statistics.title.value = Amonut
