--- a/src/main/resources/resourcebundle/MessagesBundle_es_ES.properties
+++ b/src/main/resources/resourcebundle/MessagesBundle_es_ES.properties
@@ -92,6 +92,7 @@ contact.cancel = Cancelar
 
 contact.date.format = {2} de {1} de {0}
 contact.age.format = {0} años
+contact.lastedition = Última edición el {0}
 
 statistics.title.text = Característica
 statistics.title.value = Cantidad
