Funcionalidad de menú archivo Nuevo/Abrir/Salir

--- a/src/main/resources/resourcebundle/MessagesBundle_es_ES.properties
+++ b/src/main/resources/resourcebundle/MessagesBundle_es_ES.properties
@@ -29,6 +29,8 @@ toolbar.contactadd.tooltip = Añadir contacto
 
 contacts.size = {0} contactos
 
+file.open.vcf = Fichero de Contacto Virtual
+
 contact.name = Nombre
 contact.surname = Apellidos
 contact.fullname = Nombre completo
