--- a/src/main/resources/resourcebundle/MessagesBundle.properties
+++ b/src/main/resources/resourcebundle/MessagesBundle.properties
@@ -29,6 +29,8 @@ toolbar.contactadd.tooltip = Add contact
 
 contacts.size = {0} contacts
 
+file.open.vcf = Virtual Contact File
+
 contact.name = Name
 contact.surname = Surname
 contact.fullname = Full name
