Muestra alerta por excepciones

--- a/src/main/resources/resourcebundle/MessagesBundle.properties
+++ b/src/main/resources/resourcebundle/MessagesBundle.properties
@@ -112,3 +112,6 @@ statistics.item.uniqueemail = Number of unique email
 statistics.item.uniqueaddress = Number of unique address
 
 birthday.show = Show
+
+exception.title = Exception
+exception.stacktrace = The exception stacktrace was:
