--- a/src/main/resources/resourcebundle/MessagesBundle_es_ES.properties
+++ b/src/main/resources/resourcebundle/MessagesBundle_es_ES.properties
@@ -112,3 +112,6 @@ statistics.item.uniqueemail = Número de emails únicos
 statistics.item.uniqueaddress = Número de direcciones únicas
 
 birthday.show = Mostrar
+
+exception.title = Excepción
+exception.stacktrace = La stacktrace fue:
