Mueve posiciones de elementos múltiples en la ventana de creación/edición de contacto

--- a/src/main/resources/resourcebundle/MessagesBundle.properties
+++ b/src/main/resources/resourcebundle/MessagesBundle.properties
@@ -89,6 +89,9 @@ contact.address.tag = Tag
 contact.address.type.home = Personal
 contact.address.type.work = Work
 
+contact.element.up = Up
+contact.element.down = Down
+
 contact.save = Save
 
 contact.date.format = {1} {2}, {0}
