--- a/src/main/resources/resourcebundle/MessagesBundle_es_ES.properties
+++ b/src/main/resources/resourcebundle/MessagesBundle_es_ES.properties
@@ -89,6 +89,9 @@ contact.address.tag = Etiqueta
 contact.address.type.home = Personal
 contact.address.type.work = Trabajo
 
+contact.element.up = Subir
+contact.element.down = Bajar
+
 contact.save = Guardar
 
 contact.date.format = {2} de {1} de {0}
