Añade combo de categoría en la búsqueda

--- a/src/main/resources/resourcebundle/MessagesBundle.properties
+++ b/src/main/resources/resourcebundle/MessagesBundle.properties
@@ -19,6 +19,7 @@ menu.birthday.thismonth = Birthdays this month
 menu.help = Help
 menu.help.about = About
 
+toolbar.categorysearch.tooltip = Category
 toolbar.search = Search
 toolbar.searchtype.type.all = All
 toolbar.searchtype.type.category = Category
