--- a/src/main/resources/resourcebundle/MessagesBundle_es_ES.properties
+++ b/src/main/resources/resourcebundle/MessagesBundle_es_ES.properties
@@ -19,6 +19,7 @@ menu.birthday.thismonth = Cumpleaños este mes
 menu.help = Ayuda
 menu.help.about = Acerca de...
 
+toolbar.categorysearch.tooltip = Categoría
 toolbar.search = Buscar
 toolbar.searchtype.type.all = Todos
 toolbar.searchtype.type.category = Categoría
