Estadísticas de nombre

--- a/src/main/resources/resourcebundle/MessagesBundle.properties
+++ b/src/main/resources/resourcebundle/MessagesBundle.properties
@@ -99,6 +99,9 @@ contact.date.format = {1} {2}, {0}
 contact.age.format = {0} years old
 contact.lastedition = Last edition on {0}
 
+statistics.tab.general = General
+statistics.tab.name = Name
+
 statistics.title.text = Property
 statistics.title.value = Amonut
 statistics.title.percentage = %
