--- a/src/main/resources/resourcebundle/MessagesBundle_es_ES.properties
+++ b/src/main/resources/resourcebundle/MessagesBundle_es_ES.properties
@@ -99,6 +99,9 @@ contact.date.format = {2} de {1} de {0}
 contact.age.format = {0} años
 contact.lastedition = Última edición el {0}
 
+statistics.tab.general = General
+statistics.tab.name = Nombre
+
 statistics.title.text = Característica
 statistics.title.value = Cantidad
 statistics.title.percentage = %
