Estadísticas de año de nacimiento

--- a/src/main/resources/resourcebundle/MessagesBundle.properties
+++ b/src/main/resources/resourcebundle/MessagesBundle.properties
@@ -101,6 +101,7 @@ contact.lastedition = Last edition on {0}
 
 statistics.tab.general = General
 statistics.tab.name = Name
+statistics.tab.birthyear = Birth year
 
 statistics.title.text = Property
 statistics.title.value = Amonut
