--- a/src/main/resources/resourcebundle/MessagesBundle_es_ES.properties
+++ b/src/main/resources/resourcebundle/MessagesBundle_es_ES.properties
@@ -101,6 +101,7 @@ contact.lastedition = Última edición el {0}
 
 statistics.tab.general = General
 statistics.tab.name = Nombre
+statistics.tab.birthyear = Año de nacimiento
 
 statistics.title.text = Característica
 statistics.title.value = Cantidad
