--- a/src/main/resources/resourcebundle/MessagesBundle.properties
+++ b/src/main/resources/resourcebundle/MessagesBundle.properties
@@ -122,3 +122,16 @@ birthday.show = Show
 
 exception.title = Exception
 exception.stacktrace = The exception stacktrace was:
+
+month.1 = Jan
+month.2 = Feb
+month.3 = Mar
+month.4 = Apr
+month.5 = May
+month.6 = Jun
+month.7 = Jul
+month.8 = Aug
+month.9 = Sep
+month.10 = Oct
+month.11 = Nov
+month.12 = Dec
