--- a/src/main/resources/resourcebundle/MessagesBundle_es_ES.properties
+++ b/src/main/resources/resourcebundle/MessagesBundle_es_ES.properties
@@ -122,3 +122,16 @@ birthday.show = Mostrar
 
 exception.title = Excepción
 exception.stacktrace = La stacktrace fue:
+
+month.1 = Ene
+month.2 = Feb
+month.3 = Mar
+month.4 = Abr
+month.5 = May
+month.6 = Jun
+month.7 = Jul
+month.8 = Ago
+month.9 = Sep
+month.10 = Oct
+month.11 = Nov
+month.12 = Dic
